<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="video"
            type="com.toolinc.movie.client.model.Video" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@{video.name()}"
                    tools:text="@string/sample_video_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_type_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@{video.type()}"
                    tools:text="@string/sample_video_type_label" />
            </LinearLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_watch_label"
                android:textStyle="bold" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_menu_play_circle_outline" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>