<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="10dp"
    android:elevation="2dp"
    android:padding="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_author"
                style="@style/TextAppearance.AppCompat.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                tools:text="@string/sample_author" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="@string/sample_comment" />
    </LinearLayout>
</android.support.v7.widget.CardView>