<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        app:cardCornerRadius="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_movie_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Venom" />

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cd_poster_movie"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                tools:srcCompat="@mipmap/ic_sample_movie_foreground" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_movie_poster">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rated_label"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/tv_vote_average"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.05" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/release_date_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/trailer_label"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/fab_review"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:srcCompat="@drawable/ic_menu_play_circle_outline"
                tools:visibility="visible" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/review_label"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fab_trailer"
                app:layout_constraintTop_toTopOf="@+id/fab_trailer"
                app:srcCompat="@drawable/ic_menu_rate_review"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster">

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/synopsis_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_overview"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
